--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -631,21 +631,17 @@
                                 <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISf-7o-HA6">
-                                <rect key="frame" x="18.5" y="84.5" width="29" height="27"/>
+                                <rect key="frame" x="18.5" y="85.5" width="29" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="piJ-42-use">
-                                <rect key="frame" x="52.5" y="70" width="304" height="56"/>
+                                <rect key="frame" x="52.5" y="71" width="304" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z07-sa-GJx">
-                                <rect key="frame" x="316.5" y="20" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="9xD-9A-R44"/>
-                                    <constraint firstAttribute="height" constant="50" id="rzB-Ry-LuO"/>
-                                </constraints>
+                                <rect key="frame" x="323.5" y="20" width="43" height="43"/>
                                 <state key="normal" image="cross">
                                     <color key="titleColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -653,20 +649,32 @@
                                     <action selector="crossButtonTouched:" destination="1yh-r8-bYC" eventType="touchUpInside" id="LUq-RI-bNS"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select All" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2EG-gD-UbT">
+                                <rect key="frame" x="56.5" y="143.5" width="71.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Scc-kB-yP7">
-                                <rect key="frame" x="18.5" y="138" width="128" height="30"/>
+                                <rect key="frame" x="18.5" y="139" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="k8E-lS-hS4"/>
+                                    <constraint firstAttribute="width" constant="30" id="ro8-ii-ZjT"/>
+                                    <constraint firstAttribute="width" secondItem="Scc-kB-yP7" secondAttribute="height" multiplier="1:1" id="tnz-Ph-v9H"/>
                                 </constraints>
-                                <state key="normal" title="  Select All" image="unselected">
+                                <state key="normal" image="unselected">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <action selector="selectAllButtonTouched:" destination="1yh-r8-bYC" eventType="touchUpInside" id="ajg-lE-23s"/>
-                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNL-e4-COR">
+                                <rect key="frame" x="14" y="135" width="113.5" height="38"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="IOE-x3-X48" appends="YES" id="Voh-aO-Ny4"/>
+                                </connections>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m3o-fI-UrJ">
-                                <rect key="frame" x="18.5" y="178" width="337.5" height="485"/>
+                                <rect key="frame" x="18.5" y="179" width="337.5" height="484"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
@@ -675,7 +683,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" estimatedRowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vPs-2f-QXx">
-                                <rect key="frame" x="18.5" y="178" width="337.5" height="489"/>
+                                <rect key="frame" x="18.5" y="179" width="337.5" height="488"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectDialogCell" rowHeight="60" id="bEY-ug-eJK" customClass="PSSelectDialogTableViewCell" customModule="PostSafety" customModuleProvider="target">
@@ -738,7 +746,7 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share Report" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7O-Xa-nNe">
-                                <rect key="frame" x="128.5" y="33" width="117" height="24"/>
+                                <rect key="frame" x="128.5" y="29.5" width="117" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -748,7 +756,9 @@
                         <constraints>
                             <constraint firstItem="ISf-7o-HA6" firstAttribute="centerY" secondItem="piJ-42-use" secondAttribute="centerY" id="6Or-Y6-Ipp"/>
                             <constraint firstItem="iiy-bI-I6x" firstAttribute="top" secondItem="ben-d6-jlI" secondAttribute="top" id="CAg-0k-5Gn"/>
+                            <constraint firstItem="NNL-e4-COR" firstAttribute="trailing" secondItem="2EG-gD-UbT" secondAttribute="trailing" id="CFQ-8R-kAh"/>
                             <constraint firstItem="piJ-42-use" firstAttribute="leading" secondItem="ISf-7o-HA6" secondAttribute="trailing" constant="5" id="Cov-wF-krL"/>
+                            <constraint firstItem="NNL-e4-COR" firstAttribute="leading" secondItem="Scc-kB-yP7" secondAttribute="leading" constant="-4" id="IDo-ZD-JzQ"/>
                             <constraint firstItem="iiy-bI-I6x" firstAttribute="leading" secondItem="ben-d6-jlI" secondAttribute="leading" id="ILC-g8-E3D"/>
                             <constraint firstItem="A1w-sC-igw" firstAttribute="top" secondItem="z07-sa-GJx" secondAttribute="top" id="Jkj-R7-lAB"/>
                             <constraint firstItem="vPs-2f-QXx" firstAttribute="width" secondItem="ben-d6-jlI" secondAttribute="width" multiplier="0.9" id="K9e-of-pKk"/>
@@ -756,17 +766,21 @@
                             <constraint firstItem="G7O-Xa-nNe" firstAttribute="centerX" secondItem="A1w-sC-igw" secondAttribute="centerX" id="MeE-XI-0GT"/>
                             <constraint firstAttribute="bottom" secondItem="iiy-bI-I6x" secondAttribute="bottom" id="Nvm-Kp-wbs"/>
                             <constraint firstItem="m3o-fI-UrJ" firstAttribute="bottom" secondItem="vPs-2f-QXx" secondAttribute="bottom" constant="-4" id="Ohn-qv-Cgf"/>
+                            <constraint firstItem="NNL-e4-COR" firstAttribute="bottom" secondItem="Scc-kB-yP7" secondAttribute="bottom" constant="4" id="V0N-g9-wnL"/>
                             <constraint firstItem="A1w-sC-igw" firstAttribute="trailing" secondItem="z07-sa-GJx" secondAttribute="trailing" constant="8" id="Vg6-Co-WaT"/>
                             <constraint firstItem="vPs-2f-QXx" firstAttribute="centerX" secondItem="A1w-sC-igw" secondAttribute="centerX" id="WGB-hg-L4Z"/>
                             <constraint firstItem="Scc-kB-yP7" firstAttribute="leading" secondItem="ISf-7o-HA6" secondAttribute="leading" id="YSZ-tG-r5y"/>
                             <constraint firstItem="Scc-kB-yP7" firstAttribute="top" secondItem="piJ-42-use" secondAttribute="bottom" constant="12" id="b5I-gK-VeN"/>
                             <constraint firstItem="m3o-fI-UrJ" firstAttribute="leading" secondItem="vPs-2f-QXx" secondAttribute="leading" id="cLP-ba-hj1"/>
                             <constraint firstItem="m3o-fI-UrJ" firstAttribute="top" secondItem="vPs-2f-QXx" secondAttribute="top" id="csj-fl-I8f"/>
+                            <constraint firstItem="NNL-e4-COR" firstAttribute="top" secondItem="Scc-kB-yP7" secondAttribute="top" constant="-4" id="eBF-UJ-Qz3"/>
                             <constraint firstItem="vPs-2f-QXx" firstAttribute="top" secondItem="Scc-kB-yP7" secondAttribute="bottom" constant="10" id="fGe-9e-WqA"/>
-                            <constraint firstItem="piJ-42-use" firstAttribute="top" secondItem="z07-sa-GJx" secondAttribute="bottom" id="gbd-wk-aTC"/>
+                            <constraint firstItem="piJ-42-use" firstAttribute="top" secondItem="z07-sa-GJx" secondAttribute="bottom" constant="8" id="gbd-wk-aTC"/>
                             <constraint firstItem="piJ-42-use" firstAttribute="trailing" secondItem="vPs-2f-QXx" secondAttribute="trailing" id="hVC-Jy-LfA"/>
+                            <constraint firstItem="2EG-gD-UbT" firstAttribute="leading" secondItem="Scc-kB-yP7" secondAttribute="trailing" constant="8" id="iSB-EL-e48"/>
                             <constraint firstItem="G7O-Xa-nNe" firstAttribute="centerY" secondItem="z07-sa-GJx" secondAttribute="centerY" id="pz3-AX-QVr"/>
                             <constraint firstAttribute="trailing" secondItem="iiy-bI-I6x" secondAttribute="trailing" id="sN0-J8-Ach"/>
+                            <constraint firstItem="2EG-gD-UbT" firstAttribute="centerY" secondItem="Scc-kB-yP7" secondAttribute="centerY" id="uDY-ix-R9a"/>
                             <constraint firstItem="m3o-fI-UrJ" firstAttribute="trailing" secondItem="vPs-2f-QXx" secondAttribute="trailing" id="uJh-Vf-gJg"/>
                             <constraint firstItem="A1w-sC-igw" firstAttribute="bottom" secondItem="vPs-2f-QXx" secondAttribute="bottom" id="yJ6-un-nWz"/>
                         </constraints>
@@ -777,9 +791,15 @@
                         <outlet property="searchBar" destination="piJ-42-use" id="aSy-dH-98i"/>
                         <outlet property="selectDialogTableView" destination="vPs-2f-QXx" id="1Zp-ux-1nB"/>
                         <outlet property="selectionButton" destination="Scc-kB-yP7" id="8rb-rf-MI7"/>
+                        <outlet property="selectionLabel" destination="2EG-gD-UbT" id="hCX-gj-d7v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TLc-WM-jW9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="IOE-x3-X48">
+                    <connections>
+                        <action selector="selectAllButtonTouched:" destination="1yh-r8-bYC" id="fjl-Zy-aHl"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="95017.5" y="348.5"/>
         </scene>
