minor changes in UI

--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -274,7 +274,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mSV-U2-LAO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3542" y="-15"/>
+            <point key="canvasLocation" x="3543" y="34"/>
         </scene>
         <!--Report Confirmation View Controller-->
         <scene sceneID="pPe-TI-uiJ">
@@ -1136,7 +1136,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="Xtd-7X-X0o" firstAttribute="top" secondItem="dqm-hq-j56" secondAttribute="top" constant="20" id="79l-wl-mLE"/>
                                     <constraint firstAttribute="bottom" secondItem="Vid-Pr-1qw" secondAttribute="bottom" id="FmF-gP-GT4"/>
@@ -1461,7 +1461,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="CcN-nQ-K5d" firstAttribute="top" secondItem="78Q-zq-4gk" secondAttribute="top" constant="20" id="Acs-eP-GTg"/>
                                     <constraint firstItem="neT-Gk-9Fq" firstAttribute="leading" secondItem="78Q-zq-4gk" secondAttribute="leading" id="F3J-nD-rsb"/>
@@ -2198,7 +2198,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="AST-SU-VEi" firstAttribute="top" secondItem="u6n-gQ-g6a" secondAttribute="top" constant="20" id="21M-Xu-nr5"/>
                                     <constraint firstAttribute="height" constant="64" id="3Xm-vM-xgB"/>
@@ -3125,6 +3125,6 @@
         <image name="tick" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TbI-Gg-wZk"/>
+        <segue reference="z08-Pk-UqW"/>
     </inferredMetricsTieBreakers>
 </document>
