--- a/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
+++ b/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,17 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="AtG-rE-yn1">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-i7-foO">
-                                <rect key="frame" x="94" y="240" width="187.5" height="187.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="3Z0-i7-foO" secondAttribute="height" id="f61-Kk-MTl"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-i7-foO">
+                                <rect key="frame" x="68" y="214" width="240" height="240"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Post Safety" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhI-mk-jUv">
-                                <rect key="frame" x="60.5" y="196.5" width="255.5" height="27.5"/>
+                                <rect key="frame" x="60.5" y="170.5" width="255.5" height="27.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                 <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -40,13 +32,8 @@
                         <constraints>
                             <constraint firstItem="nhI-mk-jUv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1wX-D2-i2V"/>
                             <constraint firstItem="3Z0-i7-foO" firstAttribute="top" secondItem="nhI-mk-jUv" secondAttribute="bottom" constant="16" id="Go5-s4-diU"/>
-                            <constraint firstAttribute="trailing" secondItem="AtG-rE-yn1" secondAttribute="trailing" id="KSr-ax-8Td"/>
-                            <constraint firstItem="3Z0-i7-foO" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="1/2" id="Mgj-6S-HSm"/>
-                            <constraint firstItem="AtG-rE-yn1" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="NH6-ie-AdM"/>
                             <constraint firstItem="3Z0-i7-foO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Qwe-da-sUi"/>
-                            <constraint firstItem="AtG-rE-yn1" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ldg-FB-mE0"/>
                             <constraint firstItem="3Z0-i7-foO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="roX-gJ-IgO"/>
-                            <constraint firstAttribute="bottom" secondItem="AtG-rE-yn1" secondAttribute="bottom" id="u8f-Vf-2tc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -57,7 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bg" width="360" height="480"/>
-        <image name="logo" width="512" height="512"/>
+        <image name="launch" width="240" height="240"/>
     </resources>
 </document>
