--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -479,6 +479,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="82t-Hq-GBh"/>
                                 </constraints>
+                                <color key="progressTintColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
                         </subviews>
                         <constraints>
